RESOLVED FIXED25453
AX: fall back to PLACEHOLDER attr if form element is not labeled
https://bugs.webkit.org/show_bug.cgi?id=25453
Summary AX: fall back to PLACEHOLDER attr if form element is not labeled
chris fleizach
Reported 2009-04-28 12:25:36 PDT
AXTitle should fall back to PLACEHOLDER attr if form element is not labeled.
Attachments
patch (3.44 KB, patch)
2009-04-28 12:29 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2009-04-28 12:29:15 PDT
chris fleizach
Comment 2 2009-04-28 12:37:25 PDT
Note You need to log in before you can comment on or make changes to this bug.