Bug 25453: AX: fall back to PLACEHOLDER attr if form element is not labeled https://bugs.webkit.org/show_bug.cgi?id=25453

Canonical link: https://commits.webkit.org/34997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42949 268f45cc-cd09-0410-ab3c-d52691b4dbfc